--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
   "devDependencies": {
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
-    "puppeteer": "^21.0.0"
-  },
-  "optionalDependencies": {
-    "puppeteer": "^21.0.0"
+    "jest-puppeteer": "^11.0.0"
   }
 }
